Fixed performance with creating new long objects.